# HL_HT5

./: .gitignore  .travis.yml  pyproject.toml  requirements.txt
main/: celery_results.sqlite3  db.sqlite3
main/assets/: styles.css
main/homepage/: admin.py  emails.py  forms.py  models.py  send_email.py  signals.py  tasks.py  urls.py  views.py
main/homepage/management/commands/: generate_books.py  generate_students.py  generate_subjects.py
main/homepage/migrations/: 0001_initial.py  0002_auto_20201215_2057.py  0003_student_social_ulr.py  0004_auto_20201219_2258.py  0005_auto_20201219_2307.py  0006_auto_20201221_1817.py  0007_auto_20201228_1239.py  0008_auto_20201228_1243.py  0009_auto_20201228_1244.py  0010_auto_20210110_1821.py  0011_remove_student_teachers.py  0012_currency.py
main/homepage/templates/: base.html  books_view.html  delete_student.html  details_students.html  edit_book.html  edit_student.html  home.html  send_active_code.html  send_email.html  send_email_template.html  sign_in.html  sign_out.html  sign_up.html  student_form.html  students_list.html  subject_info.html  subjects.html  teacher_detail.html  teachers.html
main/main/: celery.py  middleware.py  settings.py  urls.py
