[tool.poetry]
name = "ht_5"
version = "0.1.0"
description = ""
authors = ["KonDob <konstantin.dobro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^5.0.2"
flake8 = "^3.8.4"
Django = "^3.1.4"
celery = "^5.0.5"
gender-guesser = "^0.4.0"
crontab = "^0.22.9"
chardet = "^4.0.0"
certifi = "^2020.12.5"
SQLAlchemy = "^1.3.22"
urllib3 = "^1.26.3"
requests = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"